# hmasm

./: .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: build.yml
include/: fmt.h  isa.h  pch.h  registry.h
include/core/: argparse.h  ir.h  lexer.h  parser.h  registery.h  strdump.h  symtab.h
include/support/: exceptions.h  logging.h
resources/: GRAMMAR.md  SYNTAX.md
src/core/: argparse.c  assembler.c  ir.c  lexer.c  parser.c  registery.c  symtab.c
src/fmt/: fmt-bin.c  fmt-elf.c  fmt-pc.c  fmt.c
src/isa/: isa-arm32.c  isa-i386.c  isa-riscv.c  isa-riscv32.c  isa-worm.c  isa.c
src/support/: exceptions.c
tests/: hello.s  math.s  segments.s
